[tool.poetry]
name = "repl_python3_MEOWBOT"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyfiglet = "^0.8.post1"
aiofiles = "^0.8.0"
colorama = "^0.4.4"
discord = "^1.7.3"
Flask = "^2.0.2"
ansicolors = "^1.1.8"
colour = "^0.1.5"
ussd-session = "^0.1.6"
discord-ext-slash = "^0.9.2"
discord-buttons-plugin = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
